--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,11 @@
 <h1>Home</h1>
-<p><%= @coins %></p>
+<% @coins %>
+
+<% for x in @coins %>
+  <% for coin in @my_coins %>
+    <% if coin == x['symbol'] %>
+      <%= x['name'] %> : $<%= x['price_usd']%></br>
+      Rank: <%= x['rank'] %></br></br>
+    <% end %>
+  <% end %>
+<% end %>
